--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fs": "^0.0.1-security",
     "next": "^12.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.3.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.3.1",
